--- a/ProyectoWebEncuestas/Views/Admin/EliminarEncuestas.cshtml
+++ b/ProyectoWebEncuestas/Views/Admin/EliminarEncuestas.cshtml
@@ -3,15 +3,12 @@
 }
 
 <main class="container">
-    <div class="form-group">
-        <p>Encuesta:</p>
-        <p class="survey-name-highlight" id="nombreEncuesta"></p>
-    </div>
 
-    <p class="warning-text">¿Estás seguro de que deseas eliminar esta encuesta? Esta acción no se puede deshacer.</p>
+    <p class="warning-text">¿Estás seguro de eliminar la encuesta?</p>
+    <p class="survey-name-highlight" id="nombreEncuesta"></p>
 
     <div class="button-group">
-        <button class="submit-button" onclick="confirmarEliminacion()">Eliminar</button>
+        <button class="submit-button" onclick="confirmarEliminacion()">Aceptar</button>
         <button class="cancel-button" onclick="cancelar()">Cancelar</button>
     </div>
 </main>
