--- a/ProyectoWebEncuestas/Views/Admin/Encuestas.cshtml
+++ b/ProyectoWebEncuestas/Views/Admin/Encuestas.cshtml
@@ -57,18 +57,25 @@
         lista.forEach(encuesta => {
             const div = document.createElement("div");
             div.className = "encuesta-card";
-            const fecha = new Date(encuesta.fechaCreacion).toLocaleDateString();
             div.innerHTML = `
                 <div>
                     <h3>${encuesta.titulo}</h3>
-                    <small>Creada el ${fecha}</small>
                 </div>
                 <div class="encuesta-acciones" role="group" aria-label="Acciones encuesta">
-                    <a href="/Admin/EditarEncuestas?id=${encuesta.id}" title="Editar encuesta" aria-label="Editar encuesta ${encuesta.titulo}">✎</a>
-                    <a href="/Admin/EliminarEncuestas?id=${encuesta.id}" title="Eliminar encuesta" aria-label="Eliminar encuesta ${encuesta.titulo}">🗑</a>
-                    <a href="/Admin/VerAlumnosQueRespondieron?id=${encuesta.id}" title="Ver respuestas" aria-label="Ver respuestas encuesta ${encuesta.titulo}">📈</a>
+                    <a href="/Admin/EditarEncuestas?id=${encuesta.id}" title="Editar encuesta" aria-label="Editar encuesta ${encuesta.titulo}"><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24"><path fill="none" stroke="#2D4F2B" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="m5 16l-1 4l4-1L19.586 7.414a2 2 0 0 0 0-2.828l-.172-.172a2 2 0 0 0-2.828 0zM15 6l3 3m-5 11h8"/></svg></a>
+                    <a href="/Admin/EliminarEncuestas?id=${encuesta.id}" title="Eliminar encuesta" aria-label="Eliminar encuesta ${encuesta.titulo}"><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24"><path fill="#2D4F2B" d="M7 21q-.825 0-1.412-.587T5 19V6q-.425 0-.712-.288T4 5t.288-.712T5 4h4q0-.425.288-.712T10 3h4q.425 0 .713.288T15 4h4q.425 0 .713.288T20 5t-.288.713T19 6v13q0 .825-.587 1.413T17 21zM17 6H7v13h10zm-7 11q.425 0 .713-.288T11 16V9q0-.425-.288-.712T10 8t-.712.288T9 9v7q0 .425.288.713T10 17m4 0q.425 0 .713-.288T15 16V9q0-.425-.288-.712T14 8t-.712.288T13 9v7q0 .425.288.713T14 17M7 6v13z"/></svg></a>
+              
                 </div>
             `;
+              div.addEventListener("click", function () {
+                   window.location.href = `/Admin/VerAlumnosQueRespondieron?id=${encuesta.id}`;
+              });
+
+              div.querySelectorAll(".encuesta-acciones a").forEach(a => {
+                 a.addEventListener("click", function (e) {
+                    e.stopPropagation();
+                });
+              });
             container.appendChild(div);
         });
     }
